<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".calculator.PoECalculatorActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/calculation_poe"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cable_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/cable_types" />

    <EditText
        android:id="@+id/voltage_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_voltage"
        android:inputType="numberDecimal"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/cable_length_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_length_cable"
        android:inputType="numberDecimal"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/device_count_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_count_device"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/device_power_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_power"
        android:inputType="numberDecimal"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/power_pairs_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_count_power"
        android:inputType="number"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp" />

</LinearLayout>