<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".calculator.PasswordGeneratorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/generation_password"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/your_password"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp"
        tools:ignore="Autofill,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/length_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_length_output"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:gravity="center"
            android:hint="12"
            android:textSize="18sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/generate_password" />

    <Button
        android:id="@+id/copy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/copy_password" />

</LinearLayout>
