<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".calculator.SubnetCalculatorActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/calculation_subnet"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_IP"
        android:inputType="text"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_subnet_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_mask_subnet"
        android:inputType="number"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/output_network_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Сетевой адрес: "
        android:textSize="16sp" />

    <TextView
        android:id="@+id/output_broadcast_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Широковещательный адрес: "
        android:textSize="16sp" />

    <TextView
        android:id="@+id/output_host_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Количество доступных хостов: "
        android:textSize="16sp" />

</LinearLayout>
